Fix text alignment when Toast wraps (this was supposed to go into #640)

--- a/src/toast/index.css
+++ b/src/toast/index.css
@@ -59,9 +59,9 @@
 .spectrum-Toast-body {
   flex: 1;
   align-self: center;
-  text-align: right;
 
   .spectrum-Button {
+    float: right;
     margin-right: var(--spectrum-toast-button-margin-right);
   }
 
